2.91 Mantaflow crash when adaptive domain + noise are enabled #79626

Closed
opened 2020-08-07 16:58:39 +02:00 by Ghost · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.85

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 23:23, hash: 21fec95139
Worked: in 2.90 works fine

Short description of error
Smoke simulation doesn't seem to be working when adaptive domain and noise are enabled at the same time. They both work fine separately.

I don't have this issue in 2.90. Tested on 2 separate Windows 10 computers on factory settings.

Exact steps for others to reproduce the error

  • add a quick smoke effect to the cube
  • enable adaptive domain, and then noise in simulation's settings. Blender should crash instantly.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.85 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 23:23, hash: `21fec95139` Worked: in 2.90 works fine **Short description of error** Smoke simulation doesn't seem to be working when adaptive domain and noise are enabled at the same time. They both work fine separately. I don't have this issue in 2.90. Tested on 2 separate Windows 10 computers on factory settings. **Exact steps for others to reproduce the error** - add a quick smoke effect to the cube - enable adaptive domain, and then noise in simulation's settings. Blender should crash instantly.
Author

Added subscriber: @dabuxian

Added subscriber: @dabuxian

Added subscriber: @REYNEP

Added subscriber: @REYNEP

This Problem was Happening in 2.90 about 40 days ago..... as of this Thread #78270.... which was fixed for 2.90 with 62a819202e

This Problem was Happening in 2.90 about 40 days ago..... as of this Thread #78270.... which was fixed for 2.90 with 62a819202e

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Exception thrown at 0x00007FF6F768BA20 in blender.exe: 0xC0000005: Access violation writing location 0x0000000000000000.

>	blender.exe!Manta::Error::Error(const std::string & s) Line 56	C++

 	blender.exe!Manta::checkIndexInterpol(const Manta::Vector3D<int> & size, __int64 idx) Line 46	C++
 	blender.exe!Manta::interpol<float>(const float * data, const Manta::Vector3D<int> & size, const int Z, const Manta::Vector3D<float> & pos) Line 103	C++
 	blender.exe!Manta::Grid<float>::getInterpolatedHi(const Manta::Vector3D<float> & pos, int order) Line 607	C++
 	blender.exe!Manta::SemiLagrange<float>::op(int i, int j, int k, const Manta::FlagGrid & flags, const Manta::MACGrid & vel, Manta::Grid<float> & dst, const Manta::Grid<float> & src, float dt, bool isLevelset, int orderSpace, int orderTrace) Line 67	C++
 	blender.exe!Manta::SemiLagrange<float>::operator()(const tbb::blocked_range<__int64> & __r) Line 135	C++
 	blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>::run_body(tbb::blocked_range<__int64> & r) Line 116	C++
 	blender.exe!tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type>>::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>,tbb::blocked_range<__int64>>(tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const> & start, tbb::blocked_range<__int64> & range) Line 424	C++
 	blender.exe!tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>,tbb::blocked_range<__int64>>(tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const> & start, tbb::blocked_range<__int64> & range) Line 257	C++
 	blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>::execute() Line 143	C++
 	[External Code]	
`Exception thrown at 0x00007FF6F768BA20 in blender.exe: 0xC0000005: Access violation writing location 0x0000000000000000.` ``` > blender.exe!Manta::Error::Error(const std::string & s) Line 56 C++ blender.exe!Manta::checkIndexInterpol(const Manta::Vector3D<int> & size, __int64 idx) Line 46 C++ blender.exe!Manta::interpol<float>(const float * data, const Manta::Vector3D<int> & size, const int Z, const Manta::Vector3D<float> & pos) Line 103 C++ blender.exe!Manta::Grid<float>::getInterpolatedHi(const Manta::Vector3D<float> & pos, int order) Line 607 C++ blender.exe!Manta::SemiLagrange<float>::op(int i, int j, int k, const Manta::FlagGrid & flags, const Manta::MACGrid & vel, Manta::Grid<float> & dst, const Manta::Grid<float> & src, float dt, bool isLevelset, int orderSpace, int orderTrace) Line 67 C++ blender.exe!Manta::SemiLagrange<float>::operator()(const tbb::blocked_range<__int64> & __r) Line 135 C++ blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>::run_body(tbb::blocked_range<__int64> & r) Line 116 C++ blender.exe!tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type>>::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>,tbb::blocked_range<__int64>>(tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const> & start, tbb::blocked_range<__int64> & range) Line 424 C++ blender.exe!tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>,tbb::blocked_range<__int64>>(tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const> & start, tbb::blocked_range<__int64> & range) Line 257 C++ blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<__int64>,Manta::SemiLagrange<float>,tbb::auto_partitioner const>::execute() Line 143 C++ [External Code] ```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Note that this only seems to happen when you first turn on adaptive domain and then noise. It seems to work fine when enabling the features in the opposite order.

I get this ASAN report: P1581, which is about the same I got in #79694.

Note that this only seems to happen when you first turn on adaptive domain and then noise. It seems to work fine when enabling the features in the opposite order. I get this ASAN report: [P1581](https://archive.blender.org/developer/P1581.txt), which is about the same I got in #79694.

This issue was referenced by 5d10814ccc

This issue was referenced by 5d10814cccecd2a838fdaf6d991d5e9a335a35eb

This issue was referenced by 60b2bb3a1c

This issue was referenced by 60b2bb3a1cc24f25f27c5be0f000344703071694

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-09-10 11:10:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79626
No description provided.