Fix T79626: 2.91 Mantaflow crash when adaptive domain + noise are enabled

Crash was caused by an incorect domain size of the noise solver and an index out of bounds.